<resources>
    <string name="app_name">Pets directory</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="GetAllPets">My pets</string>
    <string name="AddPet">Add pet</string>
    <string name="btn_save">Save</string>
    <string name="etPetName_placeholder">Pet name</string>
    <string name="etPetBreed_placeholder">Pet breed</string>
    <string name="etPetAge_placeholder">Pet age</string>
    <string name="etPetType_placeholder">Pet type</string>
    <string name="tv_noElements">Nothing found</string>
    <string name="default_text">Default</string>
    <string name="pet_name_label">Name</string>
    <string name="pet_breed_label">Breed</string>
    <string name="pet_age_label">Age</string>
    <string name="pet_type_label">Type</string>
    <string-array name="petTypes">
        <item name="Dog">Dog</item>
        <item name="Cat">Cat</item>
        <item name="Hamster">Hamster</item>
    </string-array>
</resources>